--- a/_/2024_02.md
+++ b/_/2024_02.md
@@ -10,3 +10,8 @@ Rookiss MMO Lab 1기. 1.4 - Projectile Motion
 
 ### 02.08 thu
 Rookiss MMO Lab 1기. 2.1. MapManager
+
+### 02.09 fri
+Rookiss MMO Lab 1기. 2.1<br>
+Honglab Data Structures - 43%, chapter3 배열 ing<br>
+Rookiss MMO C# part2. Section1 - 24%
