--- a/_/2024_02.md
+++ b/_/2024_02.md
@@ -15,3 +15,7 @@ Rookiss MMO Lab 1기. 2.1. MapManager
 Rookiss MMO Lab 1기. 2.1<br>
 Honglab Data Structures - 43%, chapter3 배열 ing<br>
 Rookiss MMO C# part2. Section1 - 24%
+
+### 02.10 sat
+Honglab Data Structures - 59%, chapter5 Queue ing<br>
+Rookiss MMO C# part2. Section2 - 48%
