--- a/_/2024_02.md
+++ b/_/2024_02.md
@@ -1,3 +1,5 @@
+## 성과
+Rookiss MMO C# part2. Section2 완강<br>
 
 ### 02.05 mon
 Rookiss MMO Lab 1기. 1.4 - Skill
@@ -19,3 +21,10 @@ Rookiss MMO C# part2. Section1 - 24%
 ### 02.10 sat
 Honglab Data Structures - 59%, chapter5 Queue ing<br>
 Rookiss MMO C# part2. Section2 - 48%
+
+### 02.11 sun
+Honglab Data Structures - 69%, chapter5 Queue ing<br>
+Rookiss MMO C# part2. Section2 - 64%
+
+### 02.13 tue
+Rookiss MMO C# part2. Section2 - 100%
