--- a/_/2024_02.md
+++ b/_/2024_02.md
@@ -28,3 +28,6 @@ Rookiss MMO C# part2. Section2 - 64%
 
 ### 02.13 tue
 Rookiss MMO C# part2. Section2 - 100%
+
+### 02.14 wed
+이득우의 꼭 배워야하는 게임 알고리즘 - 10%
