--- a/_/2024_02.md
+++ b/_/2024_02.md
@@ -1,5 +1,6 @@
 ## 성과
 Rookiss MMO C# part2. Section2 완강<br>
+[알고리듬 어따 써요? 1편 - 길찾기 알고리듬(길찾기 알고리즘)](https://velog.io/@eugene-doobu/%EC%95%8C%EA%B3%A0%EB%A6%AC%EB%93%AC-%EC%96%B4%EB%94%B0-%EC%8D%A8%EC%9A%94-1%ED%8E%B8-%EA%B8%B8%EC%B0%BE%EA%B8%B0-%EC%95%8C%EA%B3%A0%EB%A6%AC%EB%93%AC%EA%B8%B8%EC%B0%BE%EA%B8%B0-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98) 글 작성
 
 ### 02.05 mon
 Rookiss MMO Lab 1기. 1.4 - Skill
@@ -40,3 +41,12 @@ Rookiss MMO Lab 1기. 2.2
 
 ### 02.21 wed
 Rookiss MMO Lab 1기. 2.3 effect
+
+### 02.22 thu
+R - 설치 및 RGui활용 실습<br>
+
+### 02.23 fri
+Rookiss MMO Lab 1기. 2.3
+
+### 02.25 sun
+알고리듬 어따 써요? 1편 - 길찾기 알고리듬(길찾기 알고리즘)
