--- a/_/2024_02.md
+++ b/_/2024_02.md
@@ -50,3 +50,6 @@ Rookiss MMO Lab 1기. 2.3
 
 ### 02.25 sun
 알고리듬 어따 써요? 1편 - 길찾기 알고리듬(길찾기 알고리즘)
+
+### 02.27 mon
+Rookiss MMO Lab 1기. 2.4. big monster
