--- a/_/2024_02.md
+++ b/_/2024_02.md
@@ -51,5 +51,8 @@ Rookiss MMO Lab 1기. 2.3
 ### 02.25 sun
 알고리듬 어따 써요? 1편 - 길찾기 알고리듬(길찾기 알고리즘)
 
-### 02.27 mon
+### 02.26 mon
 Rookiss MMO Lab 1기. 2.4. big monster
+
+### 02.28 wed
+Rookiss MMO Lab 1기. 2.4
