--- a/_/2024_03.md
+++ b/_/2024_03.md
@@ -6,3 +6,7 @@ idu algorithm - 20%
 ### 03.07 thu
 
 Honglab Data Structures - 83%, chapter9 bst ing<br>
+
+### 03.09 sat
+
+Honglab Data Structures - 91%, chapter10 sort ing<br>
