--- a/_/2024_07.md
+++ b/_/2024_07.md
@@ -1,3 +1,5 @@
+## 7월 셋째주
+
 ### 07.17
 
 - 글 작성 - [라이브 게임 에셋 관리 개선기 - 1.어드레서블 에셋 도입](https://velog.io/@eugene-doobu/%EB%9D%BC%EC%9D%B4%EB%B8%8C-%EA%B2%8C%EC%9E%84-%EC%97%90%EC%85%8B-%EA%B4%80%EB%A6%AC-%EA%B0%9C%EC%84%A0%EA%B8%B0-1.%EC%96%B4%EB%93%9C%EB%A0%88%EC%84%9C%EB%B8%94-%EC%97%90%EC%85%8B-%EB%8F%84%EC%9E%85)
