--- a/_/2024_08.md
+++ b/_/2024_08.md
@@ -1,3 +1,11 @@
 ### 08.04
 
 - GanOfFighters lobby setting
+
+### 08.05
+
+- GanOfFighters local movement with kcc
+
+### 08.09
+
+- 켄트 벡의 Tidy First?: 더 나은 소프트웨어 설계를 위한 32가지 코드 정리법: 완독
