--- a/_/2024_08.md
+++ b/_/2024_08.md
@@ -9,3 +9,4 @@
 ### 08.09
 
 - 켄트 벡의 Tidy First?: 더 나은 소프트웨어 설계를 위한 32가지 코드 정리법: 완독
+- 블로그 포스팅: https://snack.planetarium.dev/kor/2024/08/asset-load-1/
