--- a/_/2024_08.md
+++ b/_/2024_08.md
@@ -10,3 +10,8 @@
 
 - 켄트 벡의 Tidy First?: 더 나은 소프트웨어 설계를 위한 32가지 코드 정리법: 완독
 - 블로그 포스팅: https://snack.planetarium.dev/kor/2024/08/asset-load-1/
+
+### 08.15
+
+rookiss m1 - ~섹션4 웹서버 기본기 1주차 ing
+
