--- a/_/2024_08.md
+++ b/_/2024_08.md
@@ -24,3 +24,16 @@ rookiss m1 - ~섹션4 웹서버 기본기 2주차 ing
 ### 08.20
 
 홍정모 자료구조 압축코스 완강
+
+### 08.22
+
+홍정모 그래픽스 새싹코스 파트1
+
+- 환경셋팅
+- 파트1 -> Dx11 초기화와 IMGUI, 예제 코드 훑어보기
+
+### 08.23
+
+홍정모 알고리즘 파트1
+
+- 1.분할정복 ~ ing
