--- a/_/2024_08.md
+++ b/_/2024_08.md
@@ -37,3 +37,12 @@ rookiss m1 - ~섹션4 웹서버 기본기 2주차 ing
 홍정모 알고리즘 파트1
 
 - 1.분할정복 ~ ing
+
+### 08. 24
+
+홍정모 알고리즘 파트1
+
+- 1.분할 정복 ~ ing
+- 2.점근 분석 ~ ing
+
+글 작성 : [](https://velog.io/@eugene-doobu/%ED%99%8D%EC%A0%95%EB%AA%A8-%EC%97%B0%EA%B5%AC%EC%86%8C-%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0-%EC%95%95%EC%B6%95%EC%BD%94%EC%8A%A4-%EC%99%84%EA%B0%95-%ED%9B%84%EA%B8%B0)
