--- a/_/2024_09.md
+++ b/_/2024_09.md
@@ -23,3 +23,17 @@ Dongle mini mage - 기획
 
 Dongle mini mage - 프로젝트 설정중
 
+### 09.09
+
+홍정모 그래픽스 알고리듬 파트1
+
+- 챕터3.점화식 - 탑-다운 병합정렬
+
+홍정모 그래픽스 알고리듬 파트2
+
+- ~챕터19.문자열 - Trie
+
+홍정모 그래픽스 새싹코스 파트1 복습
+
+- 이미지 처리 기초
+
