--- a/_/2024_09.md
+++ b/_/2024_09.md
@@ -25,11 +25,11 @@ Dongle mini mage - 프로젝트 설정중
 
 ### 09.09
 
-홍정모 그래픽스 알고리듬 파트1
+홍정모 알고리듬 파트1
 
 - 챕터3.점화식 - 탑-다운 병합정렬
 
-홍정모 그래픽스 알고리듬 파트2
+홍정모 알고리듬 파트2
 
 - ~챕터19.문자열 - Trie
 
@@ -37,3 +37,14 @@ Dongle mini mage - 프로젝트 설정중
 
 - 이미지 처리 기초
 
+### 09.10
+
+홍정모 그래픽스 알고리듬 파트2
+
+- ~챕터19.문자열 - NaiveStringMatching
+
+### 09.14
+
+홍정모 알고리듬 파트1
+
+- 챕터4.중간값과 선택 - 부분 선택 정렬
