--- a/_/2024_09.md
+++ b/_/2024_09.md
@@ -48,3 +48,11 @@ Dongle mini mage - 프로젝트 설정중
 홍정모 알고리듬 파트1
 
 - 챕터4.중간값과 선택 - 부분 선택 정렬
+
+### 09.15
+
+홍정모 알고리듬 파트2
+
+- 챕터 19. 슬라이딩 윈도우 + Rabin-Karp
+
+문제풀이 - [(1786)찾기 : Platinum V](https://www.acmicpc.net/problem/1786)
