--- a/_/2024_09.md
+++ b/_/2024_09.md
@@ -56,3 +56,9 @@ Dongle mini mage - 프로젝트 설정중
 - 챕터 19. 슬라이딩 윈도우 + Rabin-Karp
 
 문제풀이 - [(1786)찾기 : Platinum V](https://www.acmicpc.net/problem/1786)
+
+### 09.17
+
+이득우 게임알고리즘
+
+- kd-tree 이론.
