--- a/_/2024_09.md
+++ b/_/2024_09.md
@@ -39,7 +39,7 @@ Dongle mini mage - 프로젝트 설정중
 
 ### 09.10
 
-홍정모 그래픽스 알고리듬 파트2
+홍정모 알고리듬 파트2
 
 - ~챕터19.문자열 - NaiveStringMatching
 
@@ -68,3 +68,14 @@ Dongle mini mage - 프로젝트 설정중
 이득우 게임알고리즘
 
 - BSP Tree
+
+### 09.22
+
+홍정모 알고리듬 파트2
+
+- 챕터 19. two-pointers
+
+홍정모 그래픽스 새싹코스 파트1 복습
+
+- 챕터2. 블룸 효과
+- 챕터3. 프로젝트 셋팅 ~ glm 원그리기
