--- a/_/2024_10.md
+++ b/_/2024_10.md
@@ -6,3 +6,13 @@
 - 챕터3. 3차원 구 그리기(구-직선 충돌)
 - 챕터3. 조명 효과
 - 챕터3. 원근 투영과 거리 비교
+
+### 10.15
+
+홍정모 그래픽스 새싹코스 파트1 복습
+
+챕터3
+
+- 삼각형과 광선의 충돌
+- 그림자
+- 무게 중심 좌표계
