--- a/_/2024_10.md
+++ b/_/2024_10.md
@@ -25,7 +25,7 @@
 
 - 텍스춰링
 
-### 10.19
+### 10.20
 
 홍정모 그래픽스 새싹코스 파트1 복습
 
@@ -35,3 +35,11 @@
 - 빛의 반사
 - 투명한 물체와 빛의 굴절
 - 큐브 매핑과 마무리
+
+### 10.21
+
+Ray Tracing in One Weekend
+
+1. Overview
+2. Output an Image
+3. The vec3 Class
