--- a/_/2024_10.md
+++ b/_/2024_10.md
@@ -40,6 +40,24 @@
 
 Ray Tracing in One Weekend
 
-1. Overview
-2. Output an Image
-3. The vec3 Class
+- 1. Overview
+- 2. Output an Image
+- 3. The vec3 Class
+
+### 10.22
+
+Ray Tracing in One Weekend
+
+- 4. Rays, a Simple Camera, and Background
+- 5. Adding a Sphere
+- 6. Surface Normals and Multiple Objects
+- 7. Moving Camera Code Into Its Own Class
+
+### 10.22
+
+Ray Tracing in One Weekend
+
+- 8. Antialiasing
+- 9. Diffuse Materials
+- 10. Metal
+
