--- a/_/2024_10.md
+++ b/_/2024_10.md
@@ -61,3 +61,21 @@ Ray Tracing in One Weekend
 - 9. Diffuse Materials
 - 10. Metal
 
+### 10.22
+
+Ray Tracing in One Weekend
+
+- 11. Dielectrics
+- 12. Positionable Camera
+
+### 10.23
+
+Ray Tracing in One Weekend
+
+- 13. Defocus Blur
+
+### 10.26
+
+홍정모 그래픽스 새싹코스 파트2 복습
+
+- 챕터4. 삼각형 레스터화
