--- a/_/2024_10.md
+++ b/_/2024_10.md
@@ -79,3 +79,18 @@ Ray Tracing in One Weekend
 홍정모 그래픽스 새싹코스 파트2 복습
 
 - 챕터4. 삼각형 레스터화
+
+### 10.27
+
+홍정모 그래픽스 새싹코스 파트2 복습
+
+챕터 4
+- 원 그리기
+- 2차원 변환
+- 2차원 애니메이션
+- 깊이 버퍼
+- 쉐이더 개념
+- 뒷면 제거
+- 원근 투영
+- 쉐이딩
+- 조명
