--- a/_/2024_10.md
+++ b/_/2024_10.md
@@ -84,7 +84,7 @@ Ray Tracing in One Weekend
 
 홍정모 그래픽스 새싹코스 파트2 복습
 
-챕터 4
+챕터 4 래스터화의 원리
 - 원 그리기
 - 2차원 변환
 - 2차원 애니메이션
@@ -94,3 +94,11 @@ Ray Tracing in One Weekend
 - 원근 투영
 - 쉐이딩
 - 조명
+
+### 10.28
+
+홍정모 그래픽스 새싹코스 파트2 복습
+
+챕터 5. 애파인 변환
+
+- 벡터
