--- a/_/2024_10.md
+++ b/_/2024_10.md
@@ -102,3 +102,12 @@ Ray Tracing in One Weekend
 챕터 5. 애파인 변환
 
 - 벡터
+
+### 10.29
+
+홍정모 그래픽스 새싹코스 파트2 복습
+
+챕터 5. 애파인 변환
+
+- 행렬
+- 변환(핵심정리, 선형변환, 회전, 애파인 변환, 좌표계 변환)
