--- a/_/2024_10.md
+++ b/_/2024_10.md
@@ -111,3 +111,18 @@ Ray Tracing in One Weekend
 
 - 행렬
 - 변환(핵심정리, 선형변환, 회전, 애파인 변환, 좌표계 변환)
+
+### 10.30
+
+홍정모 그래픽스 새싹코스 파트2 복습
+
+챕터 5. 애파인 변환
+
+- GLM(행렬, 조명, 노멀 벡터 변환)
+- DirectXMath(SimpleMath, 조명)
+- Row-Major vs Colume-Major
+
+챕터 6. 렌더링 파이프라인
+
+- COM(Component Object Model)
+- D3D시작(Direct3D 개요, 예제 프레임워크)
