--- a/_/2024_11.md
+++ b/_/2024_11.md
@@ -5,3 +5,15 @@
 챕터 6. 렌더링 파이프라인
 
 - D3D시작(초기화, 렌더링 파이프라인)
+
+### 11.04
+
+홍정모 그래픽스 새싹코스 파트2 복습
+
+챕터 6. 렌더링 파이프라인
+
+- MVP(Model, View, Projection)
+- 프로젝션 행렬 설명
+- HLSL(개요, 기본 문법, 디버거, 실습)
+- 텍스처링
+- 조명
