--- a/_/2024_11.md
+++ b/_/2024_11.md
@@ -17,3 +17,28 @@
 - HLSL(개요, 기본 문법, 디버거, 실습)
 - 텍스처링
 - 조명
+
+### 11.05
+
+홍정모 그래픽스 새싹코스 파트2 복습
+
+챕터 6. 렌더링 파이프라인
+
+- 뷰포트 크기 바꾸기
+- 윈도우 크기 바꾸기
+- Phong vs Blinn-Phong
+
+챕터 7. 렌더링 파이프라인
+
+- 와이어 프레임 그리기
+- 노멀 벡터 그리기
+- 격자 평면 만들기
+
+### 11.07
+
+홍정모 그래픽스 새싹코스 파트2 복습
+
+챕터 7. 렌더링 파이프라인
+
+- 실린더 모델링
+- 구 모델링
