--- a/_/2024_11.md
+++ b/_/2024_11.md
@@ -59,3 +59,30 @@
 챕터 7. 렌더링 파이프라인
 
 - 구 매핑의 원리
+
+### 11.13
+
+홍정모 그래픽스 새싹코스 파트2 복습
+
+챕터 7. 렌더링 파이프라인
+
+- 3D 모델 파일 읽어들이기
+
+챕터 8. 렌더링 파이프라인
+
+- Rim 효과
+- 쉐이더 가지고 놀기
+
+T2
+- OT
+
+### 11.13
+
+홍정모 그래픽스 새싹코스 파트2 복습
+
+챕터 8. 렌더링 파이프라인
+
+- CubeMapping
+
+T2
+- UI 정리
