--- a/_/2024_11.md
+++ b/_/2024_11.md
@@ -86,3 +86,15 @@ T2
 
 T2
 - UI 정리
+
+### 11.17
+
+홍정모 그래픽스 새싹코스 파트2 복습
+
+챕터 8. 렌더링 파이프라인
+
+- 환경 매핑
+- 이미지 기반 라이팅
+- 큐브맵 필터링
+- Fresnel 효과
+- image filter(blur, bloom)
