--- a/_/2024_11.md
+++ b/_/2024_11.md
@@ -98,3 +98,22 @@ T2
 - 큐브맵 필터링
 - Fresnel 효과
 - image filter(blur, bloom)
+
+### 11.18
+
+홍정모 그래픽스 새싹코스 파트2 복습
+
+챕터 8. 렌더링 파이프라인
+
+- 보충
+
+
+홍정모 그래픽스 새싹코스 파트3
+
+챕터 9. 사용자 상호작용
+
+- 1인칭 시점
+
+T2
+- LoopScroll
+- Stat
