--- a/_/2024_12.md
+++ b/_/2024_12.md
@@ -14,3 +14,22 @@ T2
 ### 12.06
 
 - leetcode daily: [2554](https://leetcode.com/problems/maximum-number-of-integers-to-choose-from-a-range-i/)
+
+### 12.08
+
+
+홍정모 그래픽스 새싹코스 파트3
+
+챕터 9. 사용자 상호작용
+
+- 마우스로 물체 선택하기(Picking)
+- 피킹 광선 충돌
+
+Rookiss DirectX11 입문
+
+1주차. DirectX11 입문
+
+- 그래픽스 OT
+- 기본 프레임워크
+- 장치 초기화
+- 삼각형 띄우기
