--- a/_/2024_12.md
+++ b/_/2024_12.md
@@ -39,3 +39,10 @@ Rookiss DirectX11 입문
 1주차. DirectX11 입문
 
 - 텍스처와 UV
+
+### 12.10
+
+Ganshine-Impact
+
+- [096] Context 코드 정리
+- [097] Unity6 도입 테스트
