--- a/_/2024_12.md
+++ b/_/2024_12.md
@@ -46,3 +46,11 @@ Ganshine-Impact
 
 - [096] Context 코드 정리
 - [097] Unity6 도입 테스트
+
+### 12.12
+
+홍정모 알고리듬 파트1
+
+- Karatsuba 알고리듬(+ 구현예시)
+- Karatsuba 알고리듬 - 분석
+- Logarithm Power Change
