--- a/_/2024_12.md
+++ b/_/2024_12.md
@@ -54,3 +54,13 @@ Ganshine-Impact
 - Karatsuba 알고리듬(+ 구현예시)
 - Karatsuba 알고리듬 - 분석
 - Logarithm Power Change
+
+### 12.14
+
+[C#과 유니티로 만드는 MMORPG 게임 개발 시리즈] Part6: 웹 서버
+
+- OT
+- HTML, CSS 개론
+- Async, Await
+- LINQ #1, LINQ #2
+- EF Core 데이터 모델링
