--- a/_/2024_12.md
+++ b/_/2024_12.md
@@ -17,7 +17,6 @@ T2
 
 ### 12.08
 
-
 홍정모 그래픽스 새싹코스 파트3
 
 챕터 9. 사용자 상호작용
@@ -64,3 +63,24 @@ Ganshine-Impact
 - Async, Await
 - LINQ #1, LINQ #2
 - EF Core 데이터 모델링
+
+### 12.15
+
+블로그 글 작성 : 최적화 기법
+
+- 스파인 최적화 관련 작성
+- 글 뼈대 작성
+
+홍정모 그래픽스 새싹코스 파트3
+
+챕터 9. 사용자 상호작용
+
+- 쿼터니언과 회전(이론)
+- 쿼터니언과 회전(실습)
+- 가상 트랙볼
+- 마우스 드래그 이동
+
+1주차. DirectX11 입문
+
+- 텍스처와 UV
+- Constant Buffer
