--- a/_/2024_12.md
+++ b/_/2024_12.md
@@ -99,3 +99,11 @@ Ganshine-Impact
 - 시작
 - 기술 스택 선정
 - 기본 틀 구현
+
+### 12.18
+
+Introduction to CUDA Programming
+
+- 강의 안내
+- 프로그램 vs 프로세스 vs 쓰레드
+- CPU 멀티쓰레딩
