--- a/_/2024_12.md
+++ b/_/2024_12.md
@@ -107,3 +107,33 @@ Introduction to CUDA Programming
 - 강의 안내
 - 프로그램 vs 프로세스 vs 쓰레드
 - CPU 멀티쓰레딩
+
+
+### 12.19
+
+Introduction to CUDA Programming
+
+- 기본 템플릿 훑어보기
+
+
+### 12.22
+
+Introduction to CUDA Programming
+
+- SISD vs SIMD vs SIMT
+- GPU 구조
+
+### 12.23
+
+개인 목표 작성중
+
+Introduction to CUDA Programming
+
+- 커널(Kernel) 함수 호출
+
+
+홍정모 그래픽스 새싹코스 파트3
+
+챕터 12. 물리 기반 렌더링링
+
+- PBR개요[1/4] - 배경
