--- a/_/2024_12.md
+++ b/_/2024_12.md
@@ -137,3 +137,18 @@ Introduction to CUDA Programming
 챕터 12. 물리 기반 렌더링링
 
 - PBR개요[1/4] - 배경
+
+### 12.25
+
+챕터 12. 물리 기반 렌더링링
+
+- PBR개요[2/4] - 물리
+- PBR개요[3/4] - 수학
+- PBR개요[4/4] - Cook-Torrance Model
+- 구 좌표계 변환
+- 언리얼 PBR 소개
+
+Ganshine-Impact
+
+- GAS관련 일감 정리
+
