--- a/_/2024_12.md
+++ b/_/2024_12.md
@@ -159,3 +159,24 @@ Speak -> 세개..
 Introduction to CUDA Programming
 
 - 블럭 여러개 사용하기
+
+### 12.29
+
+solve boj - 30455
+
+Rookiss DirectX11 입문
+
+1주차. DirectX11 입문
+
+- RasterizerState, SampleState, BlendState
+- 1주차 복습
+
+2주차. 행렬
+
+- 행렬 OT
+
+홍정모 그래픽스 새싹코스 파트3
+
+챕터 10. 기하 파이프라인인
+
+- 노멀 벡터 그리기(gs)
