--- a/_/2024_12.md
+++ b/_/2024_12.md
@@ -180,3 +180,13 @@ Rookiss DirectX11 입문
 챕터 10. 기하 파이프라인인
 
 - 노멀 벡터 그리기(gs)
+
+### 12.30
+
+solve boj - 15813
+
+Rookiss DirectX11 입문
+
+2주차. 행렬
+
+- 행렬 기초
