--- a/_/2025_01.md
+++ b/_/2025_01.md
@@ -13,3 +13,19 @@ Chapter2. 축소(Reduction) 연산
 - 수치 에러
 - Atomic 연산
 - 쓰레드 동기화
+
+### 1.2
+
+solve boj - 28691
+
+그것
+
+- 이슈 정리
+
+Introduction to CUDA Programming
+
+Chapter2. 축소(Reduction) 연산
+
+- 공유 메모리
+- 합치기
+- Thrust
