--- a/_/2025_01.md
+++ b/_/2025_01.md
@@ -29,3 +29,21 @@ Chapter2. 축소(Reduction) 연산
 - 공유 메모리
 - 합치기
 - Thrust
+
+### 1.5
+
+solve boj 
+- 1526
+- 32951
+- 9699
+
+그것
+
+- 씬 구조 설계
+- UI 구조 설계
+
+홍랩 테트리스
+
+- 프로젝트 클론
+- 인코딩 셋팅 추가
+- 멀티플레이 구상중
