--- a/_/2025_01.md
+++ b/_/2025_01.md
@@ -47,3 +47,20 @@ solve boj
 - 프로젝트 클론
 - 인코딩 셋팅 추가
 - 멀티플레이 구상중
+
+### 1.6
+
+그것
+
+- 씬 오브젝트 관리 로직 추가
+- IMGUI를 통한 오브젝트 값 변경 및 렌더링 결과 적용
+
+solve boj
+
+- 17598 
+
+Rookiss DirectX11 입문
+
+2주차. 행렬
+
+- SRT 변환 행렬
