--- a/_/2025_01.md
+++ b/_/2025_01.md
@@ -64,3 +64,19 @@ Rookiss DirectX11 입문
 2주차. 행렬
 
 - SRT 변환 행렬
+
+### 1.7
+
+그것
+
+- 오브젝트 추가/제거 로직
+
+solve boj
+
+- 28248
+
+Rookiss DirectX11 입문
+
+2주차. 행렬
+
+- 좌표게 변환
