--- a/_/2025_01.md
+++ b/_/2025_01.md
@@ -80,3 +80,19 @@ Rookiss DirectX11 입문
 2주차. 행렬
 
 - 좌표게 변환
+
+### 1.7
+
+그것
+
+- addSquareCallback
+
+solve boj
+
+- 28249
+
+Rookiss DirectX11 입문
+
+2주차. 행렬
+
+- View 변환
