--- a/_/2025_01.md
+++ b/_/2025_01.md
@@ -96,3 +96,17 @@ Rookiss DirectX11 입문
 2주차. 행렬
 
 - View 변환
+
+### 1.9
+
+solve boj
+
+- 17548
+
+Rookiss DirectX11 입문
+
+2주차. 행렬
+
+- Projection 변환 행렬
+- 2주차 복습(Screen 변환 행렬)
+
