--- a/_/2025_01.md
+++ b/_/2025_01.md
@@ -110,3 +110,24 @@ Rookiss DirectX11 입문
 - Projection 변환 행렬
 - 2주차 복습(Screen 변환 행렬)
 
+### 1.9
+
+solve boj
+
+- 26560
+
+### 1.12
+
+solve boj
+
+- 28352
+
+### 1.15
+
+Rookiss DirectX11 입문
+
+3주차. 프레임워크 제작
+
+- Graphics
+
+
