--- a/_/2025_01.md
+++ b/_/2025_01.md
@@ -130,4 +130,20 @@ Rookiss DirectX11 입문
 
 - Graphics
 
+~~
 
+크아악
+
+~~
+
+### 1.21
+
+solve boj
+
+- 1743 (bfs)
+
+홍정모 알고리듬 압축코스 Part.1
+
+챕터4. 중간값과 선택
+
+- 0403. 최대 최소 찾기
