--- a/_/2025_01.md
+++ b/_/2025_01.md
@@ -147,3 +147,15 @@ solve boj
 챕터4. 중간값과 선택
 
 - 0403. 최대 최소 찾기
+
+### 1.22
+
+solve boj
+
+- 2583 (bfs)
+
+PR-478: 3D Gaussian Splatting for Real-Time Radiance Field Rendering
+
+Ganshine-Impact
+
+- Foot IK 기능 테스트
