--- a/_/2025_01.md
+++ b/_/2025_01.md
@@ -159,3 +159,15 @@ PR-478: 3D Gaussian Splatting for Real-Time Radiance Field Rendering
 Ganshine-Impact
 
 - Foot IK 기능 테스트
+
+### 1.23
+
+Rookiss DirectX11 입문
+
+2주차. 행렬
+
+- SimpleMath 실습
+
+3주차. 프레임워크 제작
+
+- InputAssembler
