--- a/_/2025_01.md
+++ b/_/2025_01.md
@@ -171,3 +171,46 @@ Rookiss DirectX11 입문
 3주차. 프레임워크 제작
 
 - InputAssembler
+
+### 1.27
+
+solve boj
+
+- 2661 (backtracking)
+
+홍정모 그래픽스 새싹코스 파트3
+
+챕터 10. 기하 파이프라인
+
+- 파이어볼
+- 기하 분할(Tessellation)
+
+챕터 11. 텍스춰링 응용
+
+- 밉맵(Mipmap)과 LOD
+
+홍정모 알고리듬 압축코스 Part.1
+
+- 마스터 정리
+- 기준값에 의한 분할
+
+### 1.28
+
+홍정모 그래픽스 새싹코스 파트3
+
+챕터 11. 텍스춰링 응용
+
+- 노멀 매핑 [1/2]
+- 노멀 매핑 [2/2]
+- 높이맵
+- 언리얼 엔진 코드 읽어보기
+- HDRI 사용법[1/2]
+- HDRI 사용법[2/2]
+- HDR 큐브맵 만들기
+- HDR 파이프라인[1/2] - Float Render Target
+
+글 작성
+
+[내 캐릭터의 발이 돌을 뚫고 들어갔어요
+](https://velog.io/@eugene-doobu/Feet-ik-%EB%95%85-%EC%9C%84%EB%A5%BC-%EA%B1%B8%EC%96%B4%EB%8B%A4%EB%8B%88%EA%B3%A0-%EC%9E%88%EC%96%B4%EC%9A%94)
+
