--- a/_/2025_01.md
+++ b/_/2025_01.md
@@ -214,3 +214,18 @@ solve boj
 [내 캐릭터의 발이 돌을 뚫고 들어갔어요
 ](https://velog.io/@eugene-doobu/Feet-ik-%EB%95%85-%EC%9C%84%EB%A5%BC-%EA%B1%B8%EC%96%B4%EB%8B%A4%EB%8B%88%EA%B3%A0-%EC%9E%88%EC%96%B4%EC%9A%94)
 
+### 1.29
+
+solve boj
+
+- 2206 (graph, bfs)
+
+홍정모 알고리듬 압축코스 Part.1
+
+9. 그래프
+
+- 그래프 복습
+- DFS 실행 추적
+- 모든 경로 찾기 문제
+- 위상 정렬
+
