--- a/_/2025_01.md
+++ b/_/2025_01.md
@@ -219,6 +219,7 @@ solve boj
 solve boj
 
 - 2206 (graph, bfs)
+- 2252 (topology sort)
 
 홍정모 알고리듬 압축코스 Part.1
 
@@ -228,4 +229,13 @@ solve boj
 - DFS 실행 추적
 - 모든 경로 찾기 문제
 - 위상 정렬
+- 큐-기반 위상 정렬
 
+이득우 게임 수학의 이해 완강
+
+이득우 게임 엔진을 지탱하는 게임 수학
+
+1. 게임을 지탱하는 기초 수학
+
+- 수의 구조
+- 함수
