--- a/_/2025_01.md
+++ b/_/2025_01.md
@@ -239,3 +239,21 @@ solve boj
 
 - 수의 구조
 - 함수
+
+### 1.30
+
+이득우 게임 엔진을 지탱하는 게임 수학
+
+1. 게임을 지탱하는 기초 수학
+
+- 벡터
+
+2. 게임 콘텐츠의 제작 원리
+
+- 내적
+
+Rookiss DirectX11 입문
+
+12. [물방울책] 스터디
+
+- 모의 면접
