--- a/_/2025_02.md
+++ b/_/2025_02.md
@@ -27,3 +27,34 @@ solve boj
 12. 동적 프로그래밍 1
 
 - 동적 프로그래밍
+
+### 2.4.
+
+solve boj
+
+- 11055 (dp)
+- 11052 (dp)
+
+12. 동적 프로그래밍 1
+
+- 철근 잘라서 팔기 문제
+
+다이나믹 프로그래밍 완전정복
+
+1장. 재귀 호출의 이해
+
+- ~57p (1장 완)
+
+### 2.5.
+
+solve boj
+
+- 9252 (dp)
+
+13. 동적 프로그래밍 2
+
+- 최장 공통 문자열 찾기
+
+2장. 재귀 호출의 특징과 메모 전략략
+
+- ~79p (2장 완)
