--- a/_/2025_02.md
+++ b/_/2025_02.md
@@ -41,9 +41,7 @@ solve boj
 
 다이나믹 프로그래밍 완전정복
 
-1장. 재귀 호출의 이해
-
-- ~57p (1장 완)
+- 1장. 재귀 호출의 이해 ~57p (1장 완)
 
 ### 2.5.
 
@@ -55,6 +53,25 @@ solve boj
 
 - 최장 공통 문자열 찾기
 
-2장. 재귀 호출의 특징과 메모 전략략
+다이나믹 프로그래밍 완전정복
 
-- ~79p (2장 완)
+- 2장. 재귀 호출의 특징과 메모 전략 ~79p (2장 완)
+
+### 2.6.
+
+12시간 동안 온콜 32번 받음
+
+텍스처 패킹 글 정리중..
+
+다이나믹 프로그래밍 완전정복
+
+- 3장. 다이내믹 프로그래밍의 이해 ~ 89p
+- 부록 완
+
+### 2.7.
+
+solve boj
+
+- 32437 (dp)
+- 19949 (dp)
+- 20050 (dp)
