--- a/_/2025_02.md
+++ b/_/2025_02.md
@@ -75,3 +75,18 @@ solve boj
 - 32437 (dp)
 - 19949 (dp)
 - 20050 (dp)
+
+다이나믹 프로그래밍 완전정복
+
+- 3장. 다이내믹 프로그래밍의 이해 ~ 102p (3장 완)
+
+### 2.9.
+
+solve boj
+
+- 17520 (dp)
+- 2133 (dp)
+
+다이나믹 프로그래밍 완전정복
+
+- 4.다이내믹 프로그래밍 적용 전략 ~ 120p
