--- a/_/2025_02.md
+++ b/_/2025_02.md
@@ -90,3 +90,17 @@ solve boj
 다이나믹 프로그래밍 완전정복
 
 - 4.다이내믹 프로그래밍 적용 전략 ~ 120p
+
+### 2.10.
+
+solve boj
+
+- 24418 (dp)
+
+글 작성
+
+[라이브 게임 에셋 관리 개선기 - 번외1.리소스 최적화 기법](https://velog.io/@eugene-doobu/%EB%9D%BC%EC%9D%B4%EB%B8%8C-%EA%B2%8C%EC%9E%84-%EC%97%90%EC%85%8B-%EA%B4%80%EB%A6%AC-%EA%B0%9C%EC%84%A0%EA%B8%B0-%EB%B2%88%EC%99%B81.%EB%A6%AC%EC%86%8C%EC%8A%A4-%EC%B5%9C%EC%A0%81%ED%99%94-%EA%B8%B0%EB%B2%95)
+
+다이나믹 프로그래밍 완전정복
+
+- 4.다이내믹 프로그래밍 적용 전략 ~ 126p (4장 완)
