--- a/_/2025_02.md
+++ b/_/2025_02.md
@@ -104,3 +104,16 @@ solve boj
 다이나믹 프로그래밍 완전정복
 
 - 4.다이내믹 프로그래밍 적용 전략 ~ 126p (4장 완)
+
+### 2.11.
+
+solve boj
+
+- 9177 (dp)
+
+solve leetcode
+
+- daily: 2021
+
+Test
+
