--- a/_/2025_02.md
+++ b/_/2025_02.md
@@ -117,3 +117,60 @@ solve leetcode
 
 Test
 
+### 2.13.
+
+solve boj
+
+- 15489 (dp)
+
+Rookiss DirectX11 입문
+
+3주차. 프레임워크 제작
+
+- Geometry
+
+다이나믹 프로그래밍 완전정복
+
+- 5.실전 문제~ 158p
+
+### 2.17
+
+새벽 2시까지 야근핑
+
+### 2.18
+
+야근핑
+
+solve boj
+
+- 1788 (dp)
+
+
+다이나믹 프로그래밍 완전정복
+
+- 5.실전 문제~ 170p
+
+### 2.19
+
+solve boj
+
+- 2828
+
+Udemy 강의 완강
+
+- Complete 2D Runner game in Unity for Beginners 2024
+
+Udemy - Unreal Engine 5 C++ 개발자: C++ 학습하고 비디오 게임 제작하기
+
+섹션1. 강좌 소개 및 설치
+
+- 2.강의에 오신걸 환영합니다!
+- 3.언리얼엔진 설치하기
+
+섹션2. 창고 부수기
+
+- 9.섹션 개요 - Warehouse Wreckage
+
+IK의 이해와 Foot IK 구현
+
+- 글 뼈대 작성중
