--- a/_/2025_02.md
+++ b/_/2025_02.md
@@ -145,7 +145,6 @@ solve boj
 
 - 1788 (dp)
 
-
 다이나믹 프로그래밍 완전정복
 
 - 5.실전 문제~ 170p
@@ -178,3 +177,9 @@ IK의 이해와 Foot IK 구현
 ### 2.24~2.27
 
 fabrik
+
+### 2.28
+
+Window System programming
+
+- 1.introduce windows os
