--- a/_/2025_03.md
+++ b/_/2025_03.md
@@ -7,3 +7,51 @@ Section3. play with data
 - integer
 - boolean, floating point
 - char and string
+
+### 03.03
+
+Rookiss c++
+
+Section3. play with data
+
+- 산술 연산
+- 비교 연산과 논리 연산
+- 비트 연산과 비트 플래그
+- conmst와 메모리 구조
+- 유의 사항
+
+섹션4. 코드의 흐름 제어
+
+- 분기문
+
+solve boj
+
+- 14002 (gold4, dp)
+
+Project: Ganshin-Impact
+
+- implement hand-ik sample
+
+### 03.04
+
+다이나믹 프로그래밍 완전정복
+
+- 5.실전 문제~ 182p
+
+Rookiss c++
+
+섹션4. 코드의 흐름 제어
+
+- 반복문
+- 연습 문제 (별찍기와 구구단)
+- 가위-바위-보
+- 열거형
+
+섹션5. 함수
+
+- 함수 기초
+- TextRPG #1
+
+solve boj
+
+- 2876 (silver3, dp)
