--- a/_/2025_03.md
+++ b/_/2025_03.md
@@ -55,3 +55,70 @@ Rookiss c++
 solve boj
 
 - 2876 (silver3, dp)
+
+### 03.05
+
+Window System programming
+
+- 2. Memory - Virtual Address
+- 3. Memory - Memory API
+
+Rookiss Game Server(Windows IOCP)
+
+섹션1. OT
+
+- OT
+- 서버OT
+
+Rookiss c++
+
+섹션5. 함수
+
+- 스텍 프레임
+- 지역 변수와 값 전달
+- 호출 스택
+
+다이나믹 프로그래밍 완전정복
+
+- 완독
+
+c# 동시성 프로그래밍 2/e
+
+- 0장 ~22p
+
+### 03.06
+
+Rookiss c++
+
+섹션5. 함수
+
+- 스텍 프레임
+- TextRPG #2
+
+섹션6. 포인터
+
+- 포인터 기초 #1
+- 포인터 기초 #2
+- 포인터 연산
+- 포인터 실습
+- 참조 기초
+- 포인터 vs 참조
+
+Udemy - Unreal Engine 5 C++ 개발자: C++ 학습하고 비디오 게임 제작하기
+
+섹션1. 강좌 소개 및 설치
+
+- 5. 커뮤니티 및 지원
+- 6. 뷰포트 탐색
+- 7. 액터 이동 및 배치
+- 8. C++과 블루프린트
+- 9. 상부상조하는 법
+
+게임학원 따라하기 프로젝트
+
+- 글 개요 작성
+- WinAPI 프로젝트 셋팅
+
+solve boj
+
+- 1699 (silver2, dp)
