--- a/_/2025_03.md
+++ b/_/2025_03.md
@@ -138,3 +138,25 @@ G1 프로젝트 셋팅
 solve boj
 
 - 31575 (silver3, dp)
+
+### 03.09
+
+solve boj
+
+- 11048 (silver2, dp)
+
+9c_asset_3
+
+### 03.10
+
+solve boj
+
+- 17212 (silver3, dp)
+
+Rookiss c++
+
+섹션6. 포인터
+
+- 배열 기초
+
+Jenkins 로컬 셋팅
