--- a/_/2025_03.md
+++ b/_/2025_03.md
@@ -160,3 +160,27 @@ Rookiss c++
 - 배열 기초
 
 Jenkins 로컬 셋팅
+
+### 03.11
+
+solve boj
+
+- 17504 (silver5, math)
+- 32981 (silver4, dp)
+
+Rookiss c++
+
+섹션6. 포인터
+
+- 포인터 vs 배열
+
+### 03.12
+
+프로젝트 자료조사
+
+- Sentry, mixpanel
+
+섹션6. 포인터
+
+- 로또 번호 생성기
+- 다중 포인터
