--- a/_/2025_03.md
+++ b/_/2025_03.md
@@ -176,11 +176,29 @@ Rookiss c++
 
 ### 03.12
 
-프로젝트 자료조사
+G1 자료조사
 
 - Sentry, mixpanel
+
+Rookiss c++
 
 섹션6. 포인터
 
 - 로또 번호 생성기
 - 다중 포인터
+
+### 03.16
+
+G1
+
+- 게임 프로젝트 완료
+- 빌드 테스트
+- 모바일 빌드 자료조사
+- 광고 자료조사
+
+Rookiss c++
+
+섹션6. 포인터
+
+- 다차원 배열
+
