--- a/_/2025_03.md
+++ b/_/2025_03.md
@@ -202,3 +202,75 @@ Rookiss c++
 
 - 다차원 배열
 
+### 03.17
+
+Rookiss c++
+
+섹션6. 포인터
+
+- 포인터 마무리
+- 연습 문제(문자열) #1
+- 연습 문제(문자열) #2
+- 연습문제 (달팽이)
+- 파일 분할 관리
+
+### 03.18
+
+Rookiss c++
+
+섹션7. 객체지향 여행
+
+- 객체지향의 시작
+
+G1
+
+- 어드레서블2 분석
+- 어드레서블 적용 및 디버깅
+
+### 03.18
+
+Rookiss c++
+
+섹션7. 객체지향 여행
+
+- 생성자와 소멸자 #1
+- 생성자와 소멸자 #2
+
+G1
+
+- 로비씬 추가
+- 데이터 테이블 추가
+- PPT 자료 샘플 찾는 중..
+- 어드레서블 PPT 삽뜨기
+
+### 03.20
+
+Rookiss c++
+
+섹션7. 객체지향 여행
+
+- 상속성
+- 은닉성
+
+글 작성
+
+- 25-9c_asset_3_PatchSystem
+
+G1
+
+- AddressableAsset ppt 완료
+- AddressableAsset docx 작업중(~스크립트 분석)
+
+### 03.23
+
+Rookiss c++
+
+섹션7. 객체지향 여행
+
+- 다형성 #1
+
+G1
+
+- AddressableAsset docx 작업중(~에셋 빌드)
+
+
