--- a/_/2025_03.md
+++ b/_/2025_03.md
@@ -273,4 +273,24 @@ G1
 
 - AddressableAsset docx 작업중(~에셋 빌드)
 
+### 03.24
 
+Rookiss c++
+
+섹션7. 객체지향 여행
+
+- 다형성 #2
+- 초기화 리스트
+
+G1
+
+- AddressableAsset docx 작업완료
+
+### 03.25
+
+G1
+
+- Addressable Report Issue 수정
+- Addresaable Asset 로드 전략 ppt(~자료모으기)
+
+Phaser 셋팅
