--- a/_/2025_03.md
+++ b/_/2025_03.md
@@ -294,3 +294,27 @@ G1
 - Addresaable Asset 로드 전략 ppt(~자료모으기)
 
 Phaser 셋팅
+
+Rookiss c++
+
+섹션7. 객체지향 여행
+
+- 연산자 오버로딩 #1
+
+### 03.26
+
+Rookiss c++
+
+섹션7. 객체지향 여행
+
+- 연산자 오버로딩 #2
+- 객체지향 마무리
+
+G1
+
+- 모바일 빌드 이슈 정리중
+
+얌얌코딩 - 게임 프로그래머 취업 비법서(대기업 실제 면접 모음집)
+
+- 강의 완강
+- 자료 보는중(~)
