--- a/_/2025_03.md
+++ b/_/2025_03.md
@@ -318,3 +318,14 @@ G1
 
 - 강의 완강
 - 자료 보는중(~)
+
+### 03.31
+
+자소서 점검
+
+기술 공부
+
+- 그래픽스 파이프라인
+- view, position, texture, uv 좌표계
+- 짐벌락
+- 쿼터니언에 대한 이해
