--- a/_/2025_04.md
+++ b/_/2025_04.md
@@ -11,3 +11,39 @@ G1
 - 모바일 빌드 일감 정리
 - 어드레섭르 패치 일감 정리
 
+### 04.03
+
+G1
+
+- safe area
+- letter bod + ld player test
+
+Rookiss c++
+
+섹션8. 동적 할당
+
+- 동적 할당#1~3
+- 타입 변환#1~5
+
+### 04.06
+
+G1
+
+- In Game Debug console
+- Asset Patch system (Wtih git-hub)
+
+### 04.08
+
+Rookiss c++
+
+섹션8. 동적 할당
+
+- 얕은 복사 vs 깊은 복사 #1~2
+
+### 04.10
+
+Rookiss c++
+
+섹션8. 동적 할당
+
+- 캐스팅 4총사
