--- a/_/2025_04.md
+++ b/_/2025_04.md
@@ -47,3 +47,62 @@ Rookiss c++
 섹션8. 동적 할당
 
 - 캐스팅 4총사
+
+### 04.12
+
+Rookiss c++
+
+섹션11. 콜백 함수
+
+- 함수 포인터 #1~2
+- 함수 객체
+
+홍정모 알고리듬 압축코스 Part.1
+
+섹션9. 그래프
+
+- 위상 정렬 복습
+
+### 04.13
+
+Rookiss c++
+
+섹션11. 콜백 함수
+
+- 템플릿 기초 #1~2
+- 콜백 함수
+
+섹션 12. STL
+
+- vector #1~4
+
+Window System programming
+
+멀티스레드 프로그래밍
+
+- Multi-threads 프로그래밍 개요
+
+Tralralral
+
+- make 3d model test
+- upload first shorts (insta, youtube)
+
+이력관리
+
+- 자기소개 정리
+- 커리어 패스 정하고 공부할 목록 정해보기
+
+easy rust in korean
+
+- 1. Intro
+
+### 04.14
+
+solve boj
+
+- 16173(bfs)
+
+멀티스레드 프로그래밍
+
+- 스레드 제어 ~샘플코드까지
+
