--- a/_/2025_04.md
+++ b/_/2025_04.md
@@ -100,9 +100,48 @@ easy rust in korean
 
 solve boj
 
-- 16173(bfs)
+- 16173(silver4, bfs)
 
 멀티스레드 프로그래밍
 
 - 스레드 제어 ~샘플코드까지
+
+### 04.15
+
+solve boj
+
+- 16173(silver2, dp)
+
+easy rust in korean
+
+- 2. Comments
+- 3. Integers
+
+렌더링 공부
+
+- 이득우 PBR
+- 툰 쉐이딩 1강 - 카툰 렌더링의 기본 원리
+
+### 04.16
+
+멀티스레드 프로그래밍
+
+- 스레드 제어
+
+렌더링 공부
+
+- 툰 쉐이딩 2강 - 카툰 명암을 조절하고 색을 입히는 방법
+
+G1
+
+- AWS 프리티어 가입
+- 버킷 생성
+
+Udemy - Unreal Engine 5 C++ 개발자: C++ 학습하고 비디오 게임 제작하기
+
+섹션2. 창고 부수기
+
+- 11. 프로젝트 설정
+- 12. UE 5.1. 주의사항: Starter Content 폴더
+- 13. 블루프린트 이벤트 그래프
 
