--- a/_/2025_04.md
+++ b/_/2025_04.md
@@ -167,3 +167,20 @@ Rookiss c++
 ### 04.22
 
 DirectDraw 2D 게임 프로그래밍
+
+### 04.23
+
+게임학원 따라하기 프로젝트
+
+- 포폴 구경(크아)
+- 진행할 항목들 선정
+
+Rookiss c++
+
+섹션 12. STL
+
+- list #2
+
+G1
+
+- jenkins 일감 정리
