--- a/_/2025_04.md
+++ b/_/2025_04.md
@@ -184,3 +184,30 @@ Rookiss c++
 G1
 
 - jenkins 일감 정리
+
+### 04.24
+
+Rookiss c++
+
+섹션 12. STL
+
+- list #3
+
+### 04.28
+
+Rookiss c++
+
+섹션 9.실습
+
+- TextRPG (OOP) #1~3
+- 전방선언
+
+섹션 12. STL
+
+- set, multimap, multiset
+
+HG1
+
+- Project Setting
+
+공모전 서칭
