--- a/_/2025_05.md
+++ b/_/2025_05.md
@@ -37,3 +37,33 @@ Rookiss c++
 - 중괄호 초기화 { }
 - nullptr
 - enum class
+
+### 05.15
+
+Rookiss c++
+
+섹션 13. Modern C++
+
+- delete
+- override, final
+
+### 05.15
+
+Rookiss c++
+
+섹션 13. Modern C++
+
+- 오른값 참조
+- 전달 참조
+
+Udemy - Unreal Engine 5 C++ 개발자: C++ 학습하고 비디오 게임 제작하기
+
+섹션2. 창고 부수기
+
+- 14. 피직스 시뮬레이션
+- 15. 오브젝트와 레퍼런스
+
+게임프로그래밍전문가 2024 기출문제 풀이
+1. 게임프로그래밍 방법론: 96점,
+2. 게임알고리즘과 설계: 80점,
+3. 게임콘텐츠 프로그래밍: 92점
