--- a/_/2025_05.md
+++ b/_/2025_05.md
@@ -88,6 +88,7 @@ HK
 - pawn test scene 추가
 - 패배 동영상 링크
 - 쇼츠 업로드
+- 킵.
 
 Rookiss c++
 
@@ -103,6 +104,32 @@ Rookiss Dx11
 
 - 리소스 구하기
 
+### 05.20
+
+회식
+
+2048
+
+- 간단 기획서 틀 작성
+
+AI 파트1. 딥러닝 첫걸음
+
+- 파이썬 복습
+- 숫자
+- 함수
+- 미분
+- 머신러닝의 기본 개념
+- 확률
+- 뉴럴네트워크 소개
+
+C++로 배우는 딥러닝
+
+- AI and Neural Network
+- How Artificial Neurons Work
+- C++ Programming Feed-forward
+- Differentiation for programmers
+- Training a Neuron
+- Back-propagation
 
 // TODO:
 
