--- a/_/2025_05.md
+++ b/_/2025_05.md
@@ -131,6 +131,44 @@ C++로 배우는 딥러닝
 - Training a Neuron
 - Back-propagation
 
+### 05.21
+
+C++로 배우는 딥러닝
+
+- Nemerical Differentiation for programmers
+- The Gradient Desent Method
+
+AI 파트1. 딥러닝 첫걸음
+
+- 통계
+- 직선 맞추기
+- 경사 하강법
+
+MKT
+
+- 워크스페이스 생성
+- 간략적인 기획, 방향성 정립
+- VR + UE5 테스트
+- 3DGS 에셋 생성 테스트
+
+영상 시청
+
+- π가 정규 분포에 있는 이유(적분 트릭을 넘어)
+
+### 05.21
+
+C++로 배우는 딥러닝
+
+- Chain Rule
+- Fully Connected Nerual Network
+
+AI 파트1. 딥러닝 첫걸음
+
+- 파이토치로 훈련시키기
+- 뉴럴네트워크로 곡선 맞추기
+
+글쓰기 - 넥슨 면접 후기
+
 // TODO:
 
 2048 기획서 작성
