--- a/_/2025_05.md
+++ b/_/2025_05.md
@@ -175,3 +175,44 @@ AI 파트1. 딥러닝 첫걸음
 자료구조 1시간
 DX11 1시간
 언리얼 에셋 로드
+
+### 05.26
+
+2048 회의
+
+D3D2프로그래밍 소개
+
+- 진행중
+
+챕터 11. 텍스춰링 응용
+
+- 밉맵(Mipmap)과 LOD - 복습
+- 노멀 매핑[1/2] - 복습
+
+### 05.27
+
+챕터 11. 텍스춰링 응용
+
+- 노멀 매핑[2/2] - 복습
+
+HongLab-Tetris
+
+- local vcpkg로 boost 셋팅
+
+### 05.27
+
+챕터 11. 텍스춰링 응용
+
+- 높이맵 - 복습
+- 언리얼 엔진 코드 읽어보기 - 복습
+
+HongLab-Tetris
+
+- add soft-drop, change key mapping
+- Feature/delta time
+- Super Rotation System 서치
+
+G1
+
+- 깃헙 액션 / 커스텀 빌드 스크립트 테스트
+- 윈도우64 기준 빌드 테스트 진행
