--- a/_/2025_06.md
+++ b/_/2025_06.md
@@ -124,10 +124,19 @@ HongLab-Tetris
 
 섹션2. 서버 입문
 
-- 1.서버란 무엇인가
+- 2.서버란 무엇인가
 - ~ 8.온라인 게임의 진행 흐름
 
 섹션3. 언리얼 네트워크
 
 - 9.언리얼 네트워크 OT
-- 10.리슨 서버 vs 데디 서버
+- 10.[개념]리슨 서버 vs 데디 서버
+
+### 06.22
+
+[나 혼자 레벨업] UE5 멀티플레이 게임 제작 Lv. 1 (Listen 서버 입문)
+
+섹션3. 언리얼 네트워크
+
+- 11.리슨 서버 vs 데디 서버
+- ~ 25.[개념]액터 채널
