--- a/_/2025_06.md
+++ b/_/2025_06.md
@@ -140,3 +140,29 @@ HongLab-Tetris
 
 - 11.리슨 서버 vs 데디 서버
 - ~ 25.[개념]액터 채널
+
+### 06.23
+
+[나 혼자 레벨업] UE5 멀티플레이 게임 제작 Lv. 1 (Listen 서버 입문)
+
+섹션4. 게임 플레이(블루프린트)
+
+- 26.프로젝트 생성
+- ~ 50.핸디캡
+
+### 06.24
+
+D0
+
+- 환경 설정
+
+MK
+
+- VR 오브젝트(Actor/Components) 설계
+
+[나 혼자 레벨업] UE5 멀티플레이 게임 제작 Lv. 1 (Listen 서버 입문)
+
+섹션5. 로비 (블루프린트)
+
+- 51.레벨 만들기
+- ~ 53.로비 클래스
