--- a/_/2025_06.md
+++ b/_/2025_06.md
@@ -166,3 +166,21 @@ MK
 
 - 51.레벨 만들기
 - ~ 53.로비 클래스
+
+### 06.30
+
+[나 혼자 레벨업] UE5 멀티플레이 게임 제작 Lv. 1 (Listen 서버 입문)
+
+섹션5. 로비 (블루프린트)
+
+- 54.로비 UI
+- ~ 61.게임 인스턴스
+
+UE5 소스코드 분석 시리즈 #1 (게임 프레임워크)
+
+- 환경설정
+- OT
+
+D0
+
+- 1던전 분석
