--- a/_/2025_07.md
+++ b/_/2025_07.md
@@ -60,3 +60,27 @@ UE5 소스코드 분석 시리즈 #1 (게임 프레임워크)
 - Main
 - Engine
 - QnA
+
+### 07.07
+
+Udemy - Unreal Engine 5 C++ 개발자: C++ 학습하고 비디오 게임 제작하기
+
+섹션5. Toon Tanks
+
+- 143.사용자 지정 플레이어 컨트롤러
+- 144.게임 시작
+
+Rookiss c++
+
+섹션 13. Modern C++
+
+- Smart Pointer
+
+### 07.08
+
+섹션5. Toon Tanks
+
+- 145.게임 시작 위젯 ~
+- 155.다듬기 및 마무리
+
+
