--- a/_/2025_07.md
+++ b/_/2025_07.md
@@ -41,10 +41,10 @@ DPCG
 
 [나 혼자 레벨업] UE5 멀티플레이 게임 제작 Lv. 1 (Listen 서버 입문)
 
-섹션5. 로비 (블루프린트)
+섹션7. 네트워크 이론
 
-- 66.[개념]네트워크 모델
-- 67.[개념]네트워크 프로토콜
+- 74.[개념]네트워크 모델
+- 75.[개념]네트워크 프로토콜
 
 ### 07.04
 
@@ -82,5 +82,13 @@ Rookiss c++
 
 - 145.게임 시작 위젯 ~
 - 155.다듬기 및 마무리
+
+
+[나 혼자 레벨업] UE5 멀티플레이 게임 제작 Lv. 1 (Listen 서버 입문)
+
+섹션7. 네트워크 이론
+
+- 76.[개념]네트워크 장치 ~
+- 81.[개념]네트워크 네트워크 Lv.3 (라우터)
 
 
