--- a/_/2025_07.md
+++ b/_/2025_07.md
@@ -83,7 +83,6 @@ Rookiss c++
 - 145.게임 시작 위젯 ~
 - 155.다듬기 및 마무리
 
-
 [나 혼자 레벨업] UE5 멀티플레이 게임 제작 Lv. 1 (Listen 서버 입문)
 
 섹션7. 네트워크 이론
@@ -91,4 +90,20 @@ Rookiss c++
 - 76.[개념]네트워크 장치 ~
 - 81.[개념]네트워크 네트워크 Lv.3 (라우터)
 
+### 07.10
 
+[나 혼자 레벨업] UE5 멀티플레이 게임 제작 Lv. 1 (Listen 서버 입문)
+
+섹션7. 네트워크 이론
+
+- 66.C++ 프로젝트 설정
+- 70.로비 UI
+
+### 07.21
+
+[C++과 언리얼로 만드는 MMORPG 게임 개발 시리즈] Part3: 자료구조와 알고리즘
+
+섹션 1
+
+- 1.OT
+- 2.Big-O 표기법
