--- a/_/2025_07.md
+++ b/_/2025_07.md
@@ -107,3 +107,18 @@ Rookiss c++
 
 - 1.OT
 - 2.Big-O 표기법
+
+### 07.22
+
+[C++과 언리얼로 만드는 MMORPG 게임 개발 시리즈] Part3: 자료구조와 알고리즘
+
+섹션 2
+
+- 3.환경 설정
+- 4.맵 만들기
+- 5.오른손 법칙
+- 섹션2. 퀴즈
+
+섹션 3
+
+- 6. 배열, 동적 배열, 연결 리스트
