--- a/_/2025_07.md
+++ b/_/2025_07.md
@@ -121,4 +121,78 @@ Rookiss c++
 
 섹션 3
 
-- 6. 배열, 동적 배열, 연결 리스트
+- 6.배열, 동적 배열, 연결 리스트
+
+### 07.22
+
+[C++과 언리얼로 만드는 MMORPG 게임 개발 시리즈] Part3: 자료구조와 알고리즘
+
+섹션 3. 선형 자료 기초
+
+- 7.동적 배열 구현 연습
+
+### 07.24
+
+[나 혼자 레벨업] UE5 멀티플레이 게임 제작 Lv. 1 (Listen 서버 입문)
+
+섹션2. 서버 입문
+
+- 퀴즈
+
+섹션3. 언리얼 네트워크
+
+- 27.[개념] RPC 정리
+- 퀴즈
+
+섹션7. 네트워크 이론
+
+- 86.[개념] NAT와 홀펀칭
+
+섹션8. 온라인 서브시스템
+
+- 87.[개념] 온라인 서브시스템
+
+### 07.27
+
+Leetcode - 3487 (easy), 2210 (easy)
+
+[C++과 언리얼로 만드는 MMORPG 게임 개발 시리즈] Part3: 자료구조와 알고리즘
+
+섹션 3. 선형 자료 기초
+
+- 9.스택
+- 10.큐
+- 11.오른손 법칙 개선
+
+섹션 4. 그래프 기초
+
+- 12.그래프 기초
+- 13.DFS(깊이 우선 탐색)
+- 14.BFS(너비 우선 탐색)
+
+HongLab Cuda Intro
+
+섹션1. CUDA 시작하기
+
+- 강의 안내
+- 프로그램 vs 프로세스 vs 쓰레드
+- CPU 멀티쓰레딩
+- 기본 템플릿 훑어보기
+- SISD vs SIMD vs SIMT
+
+### 07.28
+
+Leetcode - 2044
+
+HongLab Cuda Intro
+
+섹션1. CUDA 시작하기
+
+- 커널(kernel) 함수 호출
+- 블럭 여러 개 사용하기
+
+섹션2. 축소(Reduction) 연산
+
+- 수치 오류 안내
+- 원자적(Atomic) 연산
+- 쓰레드 동기화
