--- a/_/2025_07.md
+++ b/_/2025_07.md
@@ -196,3 +196,56 @@ HongLab Cuda Intro
 - 수치 오류 안내
 - 원자적(Atomic) 연산
 - 쓰레드 동기화
+
+### 07.29
+
+HongLab Cuda Intro
+
+섹션2. 축소(Reduction) 연산
+
+- 공유메모리
+- 합치기
+- Thrust 소개
+
+섹션3. 행렬 곱하기
+
+- 단순한 방법
+
+[C++과 언리얼로 만드는 MMORPG 게임 개발 시리즈] Part3: 자료구조와 알고리즘
+
+섹션 4. 그래프 기초
+
+- 다익스트라 알고리즘
+- 퀴즈 풀이
+
+섹션 5. 힙과 우선순위 큐
+
+- 트리 기초
+- 힙 이론
+- 우선순위 큐 구현 연습
+- A* 길찾기 알고리즘
+- 퀴즈 풀이
+
+[나 혼자 레벨업] UE5 멀티플레이 게임 제작 Lv. 1 (Listen 서버 입문)
+
+섹션1. 2. 환경 설정
+섹션4. 퀴즈
+섹션5. 퀴즈
+
+섹션8. 온라인 서브 시스템
+
+- 95.맵 설정
+- 96.세션 시작 및 종료
+- 97.세션 파괴
+- 98.온라인 서브시스템 스팀
+- 퀴즈 풀이
+
+### 07.31
+
+[C++과 언리얼로 만드는 MMORPG 게임 개발 시리즈] Part3: 자료구조와 알고리즘
+
+섹션 6. 탐색 트리
+
+- 21.이진 탐색
+- 22.이진 탐색 트리
+- 23.레드 블랙 트리 # 1
