--- a/_/2025_08.md
+++ b/_/2025_08.md
@@ -1,4 +1,4 @@
-### 07.31
+### 08.04
 
 [C++과 언리얼로 만드는 MMORPG 게임 개발 시리즈] Part3: 자료구조와 알고리즘
 
@@ -9,3 +9,18 @@
 섹션 7. 정렬
 
 - 26.기본 정렬(버블, 선택, 삽입)
+
+### 08.06
+
+
+[C++과 언리얼로 만드는 MMORPG 게임 개발 시리즈] Part3: 자료구조와 알고리즘
+
+섹션 7. 정렬
+
+- 27.힙 정렬과 병합 정렬
+- 28.퀵 정렬
+
+섹션 8. 해시 테이블
+
+- 29.해시 테이블
+
