--- a/_/2025_08.md
+++ b/_/2025_08.md
@@ -24,3 +24,18 @@
 
 - 29.해시 테이블
 
+### 08.13
+
+[Rookiss R&D Lab] UE5 Framework Insight (Liu)
+
+섹션1.환경 설정
+
+1. OT
+2. Obsidian
+
+섹션2. Framework
+
+3. 인리얼 클래스 구조
++ SEH 자료 공부
+4. 엔진 생성
+5. 월드 생성 및 초기화
