--- a/_/2025_08.md
+++ b/_/2025_08.md
@@ -39,3 +39,61 @@
 + SEH 자료 공부
 4. 엔진 생성
 5. 월드 생성 및 초기화
+
+### 08.14
+
+[Rookiss R&D Lab] UE5 Framework Insight (Liu)
+
+섹션2. Framework
+
+6. 월드의 핵심 구성 요소 생성[개념]
+7. 월드의 핵심 구성 요소 생성
+8. 월드 액터 등록[개념]
+9. 월드 액터 등록
+10. 액터 계층 정렬[개념]
+
+### 08.14
+
+[Rookiss R&D Lab] UE5 Framework Insight (Liu)
+
+섹션2. Framework
+
+11. 액터 계층 정렬
+12. 액터의 컴포넌트 증분 등록
+
+### 08.26
+
+[Rookiss R&D Lab] UE5 Framework Insight (Liu)
+
+섹션2. Framework
+
+13. 컴포넌트 등록
+14. 컴포넌트 등록 과정[개념]
+15. 컴포넌트 등록 과정
+
+### 08.27
+
+[Rookiss R&D Lab] UE5 Framework Insight (Liu)
+
+섹션2. Framework
+
+16. 엔진 생성부터 월드 등록까지 정리
+17. PIE 생성 및 초기화
+18. 게임 초기화 과정[개념]
+19. 게임 초기화
+
+### 08.28
+
+[C++과 언리얼로 만드는 MMORPG 게임 개발 시리즈] Part3: 자료구조와 알고리즘
+
+섹션 6. 탐색 트리
+
+- 24.레드 블랙 트리#3
+
+### 08.31
+
+[Rookiss R&D Lab] UE5 Framework Insight (Liu)
+
+섹션2. Framework
+
+20. 에디터 월드 복제
