--- a/_/2025_09.md
+++ b/_/2025_09.md
@@ -22,3 +22,58 @@
 22. 월드의 게임 초기화
 23. 게임 모드 생성
 24. 월드 액터 초기화
+
+Speak
+
+- 유닛3. 샘의 집들이는 이번주 금요일이야.
+
+[C++과 언리얼로 만드는 MMORPG 게임 개발 시리즈] Part3: 자료구조와 알고리즘
+
+섹션 6. 탐색 트리
+
+- 25.레드 블랙 트리#3
+- 섹션6. 퀴즈
+
+GanAcademy
+
+시리즈1. 별의 커비
+
+00. Init Game System, 샘플 분석
+01. Add Types
+
+### 09.02
+
+백준 문제 풀이
+
+- 34217 (bronze)
+
+[Rookiss R&D Lab] UE5 Framework Insight (Liu)
+
+섹션2. Framework
+
+25. 월드 액터 초기화 과정
+26. 플레이어 구성 요소 생성
+27. 플레이어 컨트롤러 생성
+28. 플레이어 입력 vs 입력 컴포넌트
+29. 입력 처리
+30. 플레이어 입력 생성
+31. 플레이어 시작
+
+Speak
+
+T1
+
+유닛1.
+
+- The Greatest of All Time
+- Life is too short for fear
+- 잘 보고 배우게!
+
+Udemy - Unreal Engine 5 C++ 개발자: C++ 학습하고 비디오 게임 제작하기
+
+섹션 6: 심플 슈터
+
+156. 섹션 소개
+157. 프로젝트 셋업하기
+158. C++에서 폰(pawn)과 캐릭터의 차이점
+159. 캐릭터 이동 기능
