--- a/_/2025_09.md
+++ b/_/2025_09.md
@@ -209,7 +209,7 @@ G1 - 01:25PM ~ 02:30PM, 03:30PM ~ 05:30PM, 09:30PM ~ 10:30 PM, 총 4시간
 
 # 09.17
 
-G1 - 10:30PM ~ 11:30PM
+G1 - 10:30PM ~ 11:30PM, 1시간
 
 노트
 
@@ -218,10 +218,36 @@ G1 - 10:30PM ~ 11:30PM
 
 # 09.18
 
-G1 - 03:30PM ~ 06:45PM
+G1 - 03:30PM ~ 06:45PM, 00:30AM ~ 01:30AM, 4시간
 
 노트
 
 - 야외에서 노트북들고 첫작업. 점심저녁 약속을 잡아버려서 집에서 하기가 애매했다. 환경설정하는데 시간 씀.
 - elevenlabs로 사운드 뽑기?
 - 비상. 제미나이가 안된다.
+
+# 09.19
+
+G1 - 10:30AM ~ 12:00PM, 1:00PM ~ 2:30PM, 21:00 ~ 25:30, 총 7시간 30분
+
+노트
+
+- elevenlabs로 사운드 뽑기 생각보다 좋은듯?
+- 집중력 박살나서 딴짓 너무한다.
+- 슬슬 코드베이스 커지니 클로드도 전체적인 컨텍스트 주면 정신 못차리나 싶음
+
+# 09.20
+
+G1 - 12:30 ~ 16:00, 16:30 ~ 19:00, 23:00 ~ 01:30, 총 9시간 30분
+
+보급
+
+- 커피 한잔
+- 간계계밥
+
+노트
+
+- 크악 UI 시간 너무쓴다 나노바나나 말 안들어서 gpt결제했는데 애도 말 안들어서 대혼란
+- 결국 대부분의 시간이 UI 리소스 + 프리팹
+- 기획적인 부분 좀 더 고려해야 하는데 이건 런닝이나 산타면서 생각 할 예정
+- 여기 집중하면서 다른 공부나 이런거 신경은 안쓰게 된다. 어제랑 달리 오늘은 몰입 잘되서 그냥 이런거 하나 쭉 밀면서 하루 보내는 것도 나쁘지 않은듯
