--- a/_/2025_09.md
+++ b/_/2025_09.md
@@ -251,3 +251,29 @@ G1 - 12:30 ~ 16:00, 16:30 ~ 19:00, 23:00 ~ 01:30, 총 9시간 30분
 - 결국 대부분의 시간이 UI 리소스 + 프리팹
 - 기획적인 부분 좀 더 고려해야 하는데 이건 런닝이나 산타면서 생각 할 예정
 - 여기 집중하면서 다른 공부나 이런거 신경은 안쓰게 된다. 어제랑 달리 오늘은 몰입 잘되서 그냥 이런거 하나 쭉 밀면서 하루 보내는 것도 나쁘지 않은듯
+
+# 09.21
+
+[Rookiss R&D Lab] UE5 Framework Insight (Liu)
+
+섹션2. Framework
+
+39. 카메라 타겟 설정과 폰의 입력 설정
+
+# 09.22
+
+[Rookiss R&D Lab] UE5 Framework Insight (Liu)
+
+섹션2. Framework
+
+40. 빙의 완료 후 세부설정
+41. 월드 시작
+42. 프레임워크 전체 정리
+- 섹션2. 쿼즈
+
+G1 - 18:00 ~ 19:00, 22:00 ~ 24:00 총 3시간
+
+노트
+
+- 오전에 작업 시간 확보좀..ㅇ...
+- 슬슬 폴리싱 작업, 다듬기 작업에 들어가는 듯한 느낌. 이번 주 안에 최대한 마무리 해보자.
