--- a/_/2025_09.md
+++ b/_/2025_09.md
@@ -277,3 +277,33 @@ G1 - 18:00 ~ 19:00, 22:00 ~ 24:00 총 3시간
 
 - 오전에 작업 시간 확보좀..ㅇ...
 - 슬슬 폴리싱 작업, 다듬기 작업에 들어가는 듯한 느낌. 이번 주 안에 최대한 마무리 해보자.
+
+# 09.23
+
+게임 프로그래밍 전문가 실기
+
+- 2024기출문제 풀이
+- 기출문제 풀이 글 작성중
+- 모의 문제 파악중 (내일 열심히 볼 예정)
+
+G1 - 20:00 ~ 22:00, 총 2시간
+
+노트
+
+- 슬슬 UI단 작업을 본격적으로 들어가야 해서 손보고 있는데, 아 중첩 UI에 필요한 요소들 디자인 하는거랑 이미지 gemini로 뽑기 너무 힘들다. 아 이거 생각대로 커스텀이 안되다보니까 시간이 너무 오래 걸린다. 코딩 시간보다 여기가 진짜 훨씬 오래 걸린다.
+- 엔진쪽에서 작업은 거의 못하는 수순 오늘은 commit 안올릴지도?
+
+# 09.27
+
+24일부터 지금까지 3d모델 / 픽셀아트 테스트했습니다..
+
+게임 프로그래밍 전문가 실기
+
+- 시험 응시
+
+G1 - 20:10 ~ 21:20, 24:30 ~ 26:00, 총 2시간 40분
+
+노트
+
+- UI작업 시간 너무걸림2
+- 그냥 내가 작업시간이 너무 적어짐.... 그만놀아!!
