--- a/_/2025_09.md
+++ b/_/2025_09.md
@@ -307,3 +307,35 @@ G1 - 20:10 ~ 21:20, 24:30 ~ 26:00, 총 2시간 40분
 
 - UI작업 시간 너무걸림2
 - 그냥 내가 작업시간이 너무 적어짐.... 그만놀아!!
+
+# 09.28
+
+G1 - 19:30 ~ 21:00, 총 1시간 30분
+
+노트
+
+- 또 리소스쪽 손보면서 테스트코드 도입 좀 해보려고 하고있는데 문제가 있다. Unity TestRunner에서 Addressable 리소스 로드가 안된다. 이로 인해 Addressable로 데이터를 읽고.. 하는게 기본 전제로 되어 있는 나의 프로젝트에서 큰 문제로 보인다.
+- 이런 저런 테스트 하다가 결국 TableData만 로드해서 요거 검증하는 용도로만 써보도록 했다. 이거 기존 구조를 뜯어고치는게 아닌이상 테스트 쓰기 힘들듯...어캄
+
+친절한 블렌더 - [LV.0] 입문 필수
+
+섹션1. 강의 소개!
+
+- 1. 강의 소개 및 자기소개
+- 2. 블렌더 최신 버전으로 들을 때 유의사항!
+- 3. 블렌더 버전에 대한 안내 (새 영상)
+- 4. 컴퓨터 사양 확인하고 블렌더 설치하기
+- 섹션 1. 퀴즈
+
+# 09.29
+
+G1 - 12:30 ~ 13:00, 17:00 ~ 18:30, 24:30 ~ 26:00, 총 3시간 30분
+
+노트
+
+- 아 UI 하기싫다~
+- 작업시간 이게 최선이야!? 거의 직장인처럼 작업하는거같다. 반성.
+
+UH
+- 에셋 선정, HDRP기반 씬 셋팅
+- 3D에셋 로드 테스트 / ToonShader 적용 테스트
